fix height overflow

--- a/style/style.css
+++ b/style/style.css
@@ -197,6 +197,7 @@ body {
 @media screen and (max-width: 500px) {
   .container {
     width: 90%;
+    overflow: visible;
   }
 
   .four .text-box {
